written JS for hunt.html , created reaction.html along with JS

--- a/hunt.html
+++ b/hunt.html
@@ -24,92 +24,153 @@
 <div class="container">
     <div class="row">
       <div class="col-sm img-thumbnail">
-        <img id="image1" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image1" class="img-thumbnail" onclick="check(0)" src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image2" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image2" class="img-thumbnail" onclick="check(1)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image3" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image3" class="img-thumbnail" onclick="check(2)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image4" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image4" class="img-thumbnail" onclick="check(3)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image5" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm img-thumbnail">
-        <img id="image6" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image7" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image8" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image9" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image10" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image5" class="img-thumbnail" onclick="check(4)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
     </div>
     <div class="row">
       <div class="col-sm img-thumbnail">
-        <img id="image11" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image6" class="img-thumbnail" onclick="check(5)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image12" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image7" class="img-thumbnail" onclick="check(6)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image13" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image8" class="img-thumbnail"  onclick="check(7)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image14" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image9" class="img-thumbnail"  onclick="check(8)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image15" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm img-thumbnail">
-        <img id="image16" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image17" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image18" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image19" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
-      </div>
-      <div class="col-sm img-thumbnail">
-        <img id="image20" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image10" class="img-thumbnail" onclick="check(9)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
     </div>
     <div class="row">
       <div class="col-sm img-thumbnail">
-        <img id="image21" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image11" class="img-thumbnail" onclick="check(10)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image22" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image12" class="img-thumbnail" onclick="check(11)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image23" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image13" class="img-thumbnail"  onclick="check(12)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image24" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image14" class="img-thumbnail" onclick="check(13)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
       <div class="col-sm img-thumbnail">
-        <img id="image55" class="img-thumbnail" src="bush.jpg" height="250" width="250" alt="Bush">
+        <img id="image15" class="img-thumbnail" onclick="check(14)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm img-thumbnail">
+        <img id="image16" class="img-thumbnail" onclick="check(15)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image17" class="img-thumbnail" onclick="check(16)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image18" class="img-thumbnail" onclick="check(17)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image19" class="img-thumbnail" onclick="check(18)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image20" class="img-thumbnail" onclick="check(19)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm img-thumbnail">
+        <img id="image21" class="img-thumbnail" onclick="check(20)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image22" class="img-thumbnail" onclick="check(21)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image23" class="img-thumbnail" onclick="check(22)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image24" class="img-thumbnail" onclick="check(23)"  src="bush.jpg" height="250" width="250" alt="Bush">
+      </div>
+      <div class="col-sm img-thumbnail">
+        <img id="image25" class="img-thumbnail" onclick="check(24)"  src="bush.jpg" height="250" width="250" alt="Bush">
       </div>
     </div>
 
   </div>
     
 
+<script>
+
+var ids=["image1","image2","image3","image4","image5","image6","image7","image8",
+"image9","image10","image11","image12","image13","image14","image15","image16","image17",
+"image18","image19","image20","image21","image22","image23","image24","image25"];
+
+var shakeCount = 0;
+var birdlLocation=18;
+
+
+function check(position){
+var imageId=ids[position];
+img_pos = document.getElementById(imageId);
+
+if(position==birdlLocation){
+  img_pos.src = "bird.jpg"
+ 
+}
+else{
+    img_pos.src = "nest.jpg"
+}
+shakeCount=shakeCount+1;
+document.getElementById("shakes").innerHTML="Number of shakes is " + shakeCount;
+document.getElementById("score").innerHTML = "The score is " + locationScore(position, birdLocation);
+
+}
+function locationScore(pos1, pos2) {
+            var row1, row2, col1, col2
+            var data = [[0, 1, 2, 3, 4], [5, 6, 7, 8, 9], [10, 11, 12, 13, 14], [15, 16, 17, 18, 19], [20, 21, 22, 23, 24]]
+            for (let x = 0; x < data.length; x++) {
+                for (let y = 0; y < data[x].length; y++) {
+                    if (pos1 == data[x][y]) {
+                        row1 = x
+                        col1 = y
+                    }
+                }
+            }
+
+            for (let x = 0; x < data.length; x++) {
+                for (let y = 0; y < data[x].length; y++) {
+                    if (pos2 == data[x][y]) {
+                        row2 = x
+                        col2 = y
+                    }
+                }
+            }
+
+            if (row1 == row2)
+                return 1
+            else if (col1 == col2)
+                return 1
+            else if (Math.abs(pos1 - pos2) == 4 || Math.abs(pos1 - pos2) == 6)
+                return 1
+            else
+                return 0
+        }
+
+
+
+</script>
 </body>
+
 </html>
