--- a/reaction.html
+++ b/reaction.html
@@ -12,8 +12,8 @@
 <body>
 
   <h2>Reaction timer Abhishek</h2>
-  <button type="button" class="btn btn-primary" onclick="startTime()"> Start Timer </button>
-  <button type="button" class="btn btn-danger" onclick="recordReact()">React Now</button>
+  <button type="button" class="btn btn-success" onclick="startTime()"> Start Timer </button>
+  <button type="button" class="btn btn-alert" onclick="recordReact()">React Now</button>
 
   <p id="target">Your time </p>
   <p id="countdown">Count</p>
@@ -29,18 +29,6 @@
 
     var c = Math.floor(Math.random() * 9)+2;
    
-
-      setTimeout(() => {
-
-        if (myTime == undefined) {
-          document.getElementById('target').innerHTML = "Too Slow"
-        }
-        else {
-          var buttonTime = Date.now()
-          document.getElementById('target').innerHTML = "Time was " + (buttonTime - myTime)
-        }
-      }, 3000)
-    }
 
   </script>
 
