--- a/reaction.html
+++ b/reaction.html
@@ -28,7 +28,24 @@
 
 
     var c = Math.floor(Math.random() * 9)+2;
-   
+    function startTime() {
+      for (let i = 0; i < c+1; i++) {
+        setTimeout(() => {
+          document.getElementById('countdown').innerHTML = i
+        }, (c - i) * 1000)
+      }
+
+      setTimeout(() => {
+
+        if (myTime == undefined) {
+          document.getElementById('target').innerHTML = "Too Slow"
+        }
+        else {
+          var buttonTime = Date.now()
+          document.getElementById('target').innerHTML = "Time was " + (buttonTime - myTime)
+        }
+      }, 3000)
+    }
 
   </script>
 
