added new buttons

--- a/queue.html
+++ b/queue.html
@@ -36,6 +36,9 @@
     <input type="text" id="form_text" name="form_text">
     <button onclick="makeNewDiv()"> Add value </button>
     <br> <br>
+	<button onclick="fetchItem()"> Fetch</button>
+    <button onclick="zap()"> Zap values</button>
+    <button onclick="unique()">Unique</button>
 
 </body>
 <script>
@@ -61,5 +64,34 @@
             }
         }
     }
+
+	function zap() {
+        var queueItems = document.getElementsByClassName("queue")
+        var len = queueItems.length;
+        var item = document.getElementById("form_text").value;
+        for (let i = 0; i < len; i++) {
+            if (item == queueItems[i].innerHTML) {
+                queueItems[i].remove();
+                console.log("We are getting rid of all the elements with that text");
+            }
+        }
+    }
+
+    function unique() {
+        queueItems = document.getElementsByClassName('queue');
+        var len = queueItems.length
+        for (let i = 0; i < len; i++) {
+            for (let j = i + 1; j < len - 1; j++) {
+                if (queueItems[i].innerHTML == queueItems[j].innerHTML) {
+                    queueItems[j].remove();
+                    
+                }
+            }
+        }
+
+
+
+    }
+
 </script>
 </html>	
