--- a/queue.html
+++ b/queue.html
@@ -2,11 +2,11 @@
 <html> <head> <style>
     .flex-container {
       display: flex;  flex-direction:row;
-      background-color: red;
+      background-color: rgb(35, 192, 127);
   }
 
 .flex-container > div {  /*div children of the flex container*/
-  background-color: #f1f1f1; 
+  background-color: #c99628; 
   margin: 10px;  padding: 20px;  font-size: 30px;
 }
 
@@ -14,7 +14,7 @@
 @media (max-width: 600px) { 
 	 .flex-container{
 		 flex-direction:column;
-		 background-color: green;
+		 background-color: rgb(28, 82, 199);
 	  }
 	}
 </style>
